--- a/style/style.css
+++ b/style/style.css
@@ -1504,3 +1504,324 @@ section.sectionReady .button {
   text-decoration: none;
   opacity: 0.8;
 }
+.congratsPage .contentArea {
+  max-width: 1220px;
+  margin: auto;
+}
+.congratsPage header {
+  padding: 15px 30px;
+  border-bottom: 2px solid #d5d5d5;
+  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+}
+.congratsPage section {
+  padding: 0 30px;
+}
+.congratsPage section .contentArea {
+  padding-bottom: 100px;
+}
+.congratsPage .controlBox {
+  -webkit-box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  padding: 30px;
+  margin-top: 50px;
+}
+.congratsPage .controlBox .btn-outline-dark {
+  margin-top: 1em;
+  border-radius: 5px;
+  font-size: 13px;
+}
+.congratsPage .controlBox .btn-outline-dark i.material-icons {
+  background: #343a40;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 1.2em;
+  padding: 0.1em;
+  margin-left: 1em;
+  display: inline-block;
+  vertical-align: middle;
+}
+.congratsPage .otherContents {
+  -webkit-box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  padding: 0 30px;
+  margin-top: 30px;
+}
+.congratsPage .otherContents ul {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+.congratsPage .otherContents li:not(:last-child) {
+  border-bottom: 1px solid #979797;
+}
+.congratsPage .otherContents a {
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 20px 0;
+  color: #000;
+}
+.congratsPage .otherContents a:after {
+  content: 'chevron_right';
+  font-family: 'Material Icons';
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 50%;
+  background-color: rgba(79, 79, 79, 0.3);
+  color: #fff;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: background-color 0.4s;
+  transition: background-color 0.4s;
+}
+.congratsPage .otherContents a:hover {
+  text-decoration: none;
+}
+.congratsPage .otherContents a:hover:after {
+  background-color: rgba(79, 79, 79, 0.7);
+}
+.congratsPage .summaryPoints {
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+}
+.congratsPage .summaryPoints li {
+  color: #545454;
+  font-size: 13px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.congratsPage .summaryPoints li p {
+  margin: 0;
+}
+.congratsPage .summaryPoints li:not(:last-child) {
+  margin-bottom: 20px;
+}
+.congratsPage .summaryPoints li:before {
+  content: 'check';
+  color: #28a08c;
+  font-family: 'Material Icons';
+  background-color: #e4fff0;
+  border: 1px solid #a2ddcd;
+  border-radius: 50%;
+  width: 1.7em;
+  height: 1.7em;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 1.5em;
+}
+.congratsPage .statusRep {
+  position: relative;
+}
+.congratsPage .statusRep:before {
+  content: '';
+  display: block;
+  padding-bottom: 55%;
+}
+.congratsPage .statusRep:after {
+  content: '';
+  background: url('../images/charectar-live.jpg') right bottom no-repeat;
+  background-size: 100% auto;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 60%;
+  padding-bottom: 36%;
+}
+.congratsPage .statusRep .head {
+  position: absolute;
+  left: 8%;
+  top: 47%;
+  z-index: 2;
+}
+.congratsPage .statusRep .head h2 {
+  font-size: 42px;
+  font-weight: bold;
+}
+.congratsPage .statusRep .head p {
+  font-size: 22px;
+  color: #6a6a6a;
+}
+.congratsPage .statusRep .head strong {
+  font-weight: normal;
+}
+.congratsPage .statusRep .head .live h2 {
+  background: linear-gradient(45deg, #1ca9b2 0%, #70ccb1 90%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.congratsPage .statusRep .head .live strong {
+  color: #000;
+}
+.congratsPage .statusRep .head .paused {
+  display: none;
+}
+.congratsPage .statusRep .head .paused h2 {
+  color: #000;
+}
+.congratsPage .statusRep .head .paused strong {
+  font-weight: bold;
+}
+.congratsPage .statusRep .statusInfo {
+  background-color: #e5eff5;
+  border-radius: 10px;
+  width: 60%;
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  bottom: 0;
+}
+.congratsPage .statusRep .statusInfo i.material-icons {
+  color: #1064ff;
+  border-radius: 50%;
+  border: 5px solid rgba(0, 0, 0, 0.2);
+  margin-right: 15px;
+}
+.congratsPage .statusRep .statusInfo i[class^="icon-"] {
+  width: 1.7em;
+  height: 1.7em;
+  border: 1px solid;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 19px;
+  border-radius: 50%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-right: 10px;
+}
+.congratsPage .statusRep .statusInfo div {
+  color: #1b708e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-right: 15px;
+}
+.congratsPage .statusRep .statusInfo span {
+  font-size: 12px;
+}
+.congratsPage .setupList ul {
+  list-style: none;
+  padding: 0 50px;
+  margin: 0;
+  border-radius: 5px;
+  border: 1px solid #000;
+}
+.congratsPage .setupList div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.congratsPage .setupList div:after {
+  content: '';
+  color: rgba(0, 0, 0, 0.3);
+  width: 15px;
+  height: 15px;
+  border-right: 1px solid;
+  border-bottom: 1px solid;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  margin-right: 15px;
+}
+.congratsPage .setupList h5 {
+  font-size: 18px;
+}
+.congratsPage .setupList i.icon-undefined {
+  height: 1.25em;
+  font-size: 0.8em;
+  color: rgba(0, 0, 0, 0.3);
+}
+.congratsPage .setupList li {
+  padding: 25px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.congratsPage .setupList li:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.congratsPage .rateExperience {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  text-align: right;
+}
+.congratsPage.paused .summaryPoints li p {
+  text-decoration: line-through;
+}
+.congratsPage.paused .summaryPoints li:before {
+  content: '!';
+  color: #ff8926;
+  border-color: #ff8926;
+  background: transparent;
+  font-family: sans-serif;
+}
+.congratsPage.paused .statusRep:after {
+  background-image: url('../images/charectar-paused.jpg');
+}
+.congratsPage.paused .statusRep .head .live {
+  display: none;
+}
+.congratsPage.paused .statusRep .head .paused {
+  display: block;
+}
